   * Balancing changes:
     * Made units with the healthy trait take a quarter less damage from
       poison instead of half.
 * User interface:
   * Various minor cleanups and refactoring of the new widgets.
   * Added a new scroll label widget.
   * Allowed usage of wildcards (? and *) in friend and ignore lists.
   * Allowed usage of lists in /friend, /ignore and /remove commands. (feature
   #7492)
 * WML engine:
   * New command, [store_time_of_day], makes it possible to store ToD info
     in a WML array/container.
   * Changed underlying_id in unit to be unique number
 * AI
   * Made it possible to use formula AI for recruiting when using default ai
   * Changed defaults for AI parameters: village_value, villages_per_scout,
     protect_leader, protect_leader_radius, leader_value
   * Added new ai paramater number_of_possible_recruits_to_force_recruit which
     tells AI when it must move leader back to keep.
   * Improved leader movement and protection.
   * Improved village grabbing and protection.
   * Made 'caution' to control how dangerous place AI tries to attack
 * Miscellaneous and bug fixes:
   * Fixed the list of the unit's attacks getting cut off in the right panel
     (bug #12297).
   * Fixed wesnoth not to try to add duplicate ids to unit_map
   * Fixed a bug where the old unit type's abilities and attacks weren't
     completely cleared during level-up
   * Improved performance of 'recall' user action when disallow_recall
     is set to true in scenarios.
   * Various code cleanups
   * Removed the requirement for files in ~campaigns to have a corresponding
     directory.

Version 1.5.4:
 * Editor2:
   * Rotate clipboard 60 deg. cw/ccw, ctrl+r/ctrl+shift+r respectively
     (cmd instead of ctrl on Mac). Active in the "paste" mode.
   * A drag operation only creates one undo action instead of many.
   * Partial undo feature to keep the old behavior of drag undo available