@@ -20,6 +20,7 @@ src/gui/widgets/container.cpp
 src/gui/widgets/event_handler.cpp
 src/gui/widgets/grid.cpp
 src/gui/widgets/helper.cpp
+src/gui/widgets/image.cpp
 src/gui/widgets/label.cpp
 src/gui/widgets/listbox.cpp
 src/gui/widgets/menubar.cpp
